Genealogy api docs finished. Added basic info about the person in returned json
